--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   
+
   <div class="page-header">
     <h1>Welcome to Twitter.js!</h1>
   </div>
@@ -15,7 +16,14 @@
     
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.content}}</li>
+      <div class="tweetbox">
+        <img>
+        <div class="content">
+        
+          <p class="by"><a href="/users/{{tweet.name}}"><strong>{{tweet.name}}</strong></a></p>
+               <p><a href="/tweets/{{tweet.id}}">{{tweet.content}}</a></p>
+        </div>
+      </div>     
       {% endfor %}
       
     </div>
