--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,14 @@ body {
   height: 100%;
   /* The html and body elements cannot have any padding or margin. */
 }
-
+li {
+    list-style-type: none;
+    color: lightblue;
+    font-size: 10px
+}
+a {
+    color: lightblue;
+}
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
